--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -49,3 +49,20 @@ form img {
 .portafolio img{
   width:100%;
 }
+.presentacionBoton{
+  width:100%;
+  height:300px;
+  background:#000;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+}
+.presentacionBoton a{
+  text-decoration:none;
+  color:#000;
+  background:gold;
+}
+.presentacionBoton button{
+  padding:10px 35px;
+  
+}
