--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -52,7 +52,6 @@ form img {
 .presentacionBoton{
   width:100%;
   height:300px;
-  background:#000;
   display:flex;
   justify-content:center;
   align-items:center;
@@ -60,9 +59,10 @@ form img {
 .presentacionBoton a{
   text-decoration:none;
   color:#000;
-  background:gold;
+  
 }
 .presentacionBoton button{
   padding:10px 35px;
+  background:#F2C744;
   
 }
