--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -82,3 +82,39 @@ form img {
 .audios audio{
   width: 100%;
 }
+
+.agradecimiento {
+  text-align: center;
+  padding: 10px;
+  font-family: 'Roboto';
+  font-weight: 900;
+}
+
+.botonesthanks {
+  text-align: center;
+}
+
+.botonesthanks .btn {
+  margin: 5px;
+  border: none;
+  background: #FFCD5C;
+  color: #fff;
+  width: 45%;
+  border-radius: 15px;
+}
+
+.thanks3d {
+  width: 100%;
+  height: 300px;
+  margin:auto;
+  text-align:center;
+  background: url("tecfoodPost.png");
+  background-size: cover;
+  background-position: center;
+}
+model-viewer {
+  width: 100%;
+  margin: auto;
+  height: 350px;
+}
+
