--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -94,6 +94,8 @@ form img {
   text-align: center;
   max-width: 700px;
   margin: auto;
+  margin-top:15px;
+  z-index:1000;
 }
 
 .botonesthanks .btn {
