--- a/docs/assets/css/styles.css
+++ b/docs/assets/css/styles.css
@@ -109,7 +109,7 @@ form img {
 
 .thanks3d {
   width: 100%;
-  height: 300px;
+  height: 100%;
   margin:auto;
   text-align:center;
   background: url("./tecfoodPost.png");
